history building started